Agregados los links de twitter y facebook

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 	  		  <div class="row">
 	  			  <div class="col-md-12">
 	  			  	<h2>Conectá con nosotros</h2>
-	  			   	<a class="icon-facebook"></a>
-	  			   	<a class="icon-twitter"></a>
+	  			   	<a class="icon-facebook" href="https://www.facebook.com/pages/Python-Argentina-PyAr/116570661703656" target='blank'></a>
+	  			   	<a class="icon-twitter" href="https://www.twitter.com/pythonargentina" target='blank'></a>
 	  			   </div>
 	  		  </div>
 	  	  </div>	  
