--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <title>PyCon Argentina 2015 - 12,13 y 14 de Noviembre</title>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <!-- CSS 
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="http://ar.pycon.org"/>
+    <meta property="og:title" content="PyCon Argentina 2015 - 12,13 y 14 de Noviembre en Mendoza"/>
+    <meta property="og:description" content="Call for charlas abierto! Envianos tu propuesta para dar una charla en PyCon Argentina 2015. Tenés tiempo hasta el 15 de Septiembre. Lo más probable es que no haya extensiones en el plazo, por lo que tengan presente la fecha y no se demoren en enviar las propuestas."/>
+    <meta property="og:image" content="http://ar.pycon.org/img/python_logo.png"/>
+    <!-- CSS
         ================================================== -->
     <!-- Bootstrap 3-->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
