--- a/index.html
+++ b/index.html
@@ -16,18 +16,28 @@
 <!-- Google Fonts -->
 <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic|Roboto+Condensed:300italic,400italic,700italic,400,300,700' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700' rel='stylesheet' type='text/css'>
+<link rel="icon" type="image/png" href="favicon.ico">
 <!-- Template Styles -->
 <link href="css/style.css" rel="stylesheet" media="screen">
 <script src="https://maps.googleapis.com/maps/api/js"></script>
 <script> 
 function initialize() {
   var mapCanvas = document.getElementById('map');
+  var mapCenter = new google.maps.LatLng(-32.887902, -68.814409);
   var mapOptions = {
-center: new google.maps.LatLng(-32.887902, -68.814409),
-        zoom: 15,
+        center: mapCenter,
+        zoom: 16,
+        scrollwheel: false,
         mapTypeId: google.maps.MapTypeId.ROADMAP
   }
+
   var map = new google.maps.Map(mapCanvas, mapOptions);
+
+  var marker = new google.maps.Marker({
+      position: mapCenter,
+      map: map,
+      title: 'Espacio Cultural Julio Le Parc'
+  });
 }
 google.maps.event.addDomListener(window, 'load', initialize);
 </script>
