Call for sponsors

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
   <div class="container">
     <div class="row">
       <div class="col-md-offset-2 col-md-8">
-        <h1>Hasta cuándo hay tiempo?</h1>
+        <h1>¿Hasta cuándo hay tiempo?</h1>
         <p class="lead">Hasta el <b>15 de Septiembre.</b> Debido a la cercanía del evento, lo más probable es que no haya extensiones en el plazo, por lo que tengan presente la fecha y no se demoren en enviar las propuestas.</p>
         </br>
         <h1>Qué requerimientos debe respetar una charla?</h1>
@@ -114,9 +114,16 @@ google.maps.event.addDomListener(window, 'load', initialize);
   </div>
 </section>
 
+<section class="sponsors">
+  <div class="row">
+    <h1>¿Querés ser sponsor del evento?</h1>
+    <a href="https://drive.google.com/file/d/0B7R6KRhjEcaHZF9iRDNBUGpQUWs/view?usp=sharing" class="btn btn-lg btn-primary" target="blank" role="button">Carta Sponsors</a>
+  </div>
+</section>
+
 <section class="venue">
   <div class="row">
-    <h1>Donde?</h1>
+    <h1>¿Dónde?</h1>
     <p class="lead">En el centro cultural Julio Le Parc</p>
     <div class="col-md-12 leparc">
     </div>
