Code of conduct

--- a/index.html
+++ b/index.html
@@ -90,8 +90,10 @@ google.maps.event.addDomListener(window, 'load', initialize);
 <section class="features">
   <div class="container">
     <div class="row">
-      <h1>Call for charlas abierto!</h1>
-      <p class="lead">Envianos tu propuesta para dar una charla en PyCon</p>
+      <h1>Noticias</h1>
+      <p class="lead">Ya tenemos las charlas preparadas y estamos ultimando detalles para lanzar próximamente la inscripción a la PyCon! Estás tan ansioso como nosotros? Bueno, te adelantamos algo:</p> 
+      <p class="lead">Durante todas las jornadas, podrás elegir entre 2 charlas que se darán al mismo tiempo.   
+      Qué tenemos preparado para que vengas? Un pybus, convenios con hostels, premios y mucho más..te mantenemos al tanto!<p>
     </div>
   </div>
 </section>
@@ -100,15 +102,23 @@ google.maps.event.addDomListener(window, 'load', initialize);
   <div class="container">
     <div class="row">
       <div class="col-md-offset-2 col-md-8">
-        <h1>¿Hasta cuándo hay tiempo?</h1>
-        <p class="lead">Hasta el <b>15 de Septiembre.</b> Debido a la cercanía del evento, lo más probable es que no haya extensiones en el plazo, por lo que tengan presente la fecha y no se demoren en enviar las propuestas.</p>
-        </br>
-        <h1>Qué requerimientos debe respetar una charla?</h1>
-        <p class="lead"><b>Duración:</b> Las charlas son de 45 minutos de duración, más 10 minutos de preguntas. Agradecemos que las propuestas se adapten en lo posible a este formato.</p>
-        <p class="lead"><b>Tema:</b> La charlas deben guardar en lo posible relación con Python (el lenguaje, su comunidad, o herramientas relacionadas), aunque también se reciben propuestas de charlas sobre tecnologías similares o sobre software en general (incluidos software libre, comunidades, educación, etc.). Si dudan sobre si un tema corresponde o no corresponde, envíen la propuesta! Lo peor que puede pasar es que no entre en el cronograma :)</p>
-        <!--<div style='width:100%; text-align:center;'><iframe src='https://eventioz.com.ar/e/call-for-charlas-pycon-argentina-2015/registrations/new?iframe=' width='800' height='800' frameborder='0' scrolling='yes' style='width:800;height:800;border:none'></iframe></div>-->
-        </br>
-        <a href="https://eventioz.com.ar/e/call-for-charlas-pycon-argentina-2015" class="btn btn-lg btn-primary" role="button">Mandá tu charla!</a>
+
+        <h1>Código de Conducta</h1>
+        <p class="lead">Valoramos la participación de cada miembro de la comunidad Python y que todos los asistentes tengan una experiencia agradable y satisfactoria. En consecuencia, se espera que todos los asistentes muestren respeto y cortesía a otros asistentes durante toda la conferencia y en todos los eventos relacionados con la conferencia.</p>
+        <p class="lead">Para no dejar lugar a dudas, lo que se espera es que todos los asistentes, expositores, organizadores y voluntarios de la PyCon cumplan el siguiente Código de Conducta. Los organizadores (Voluntarios, speakers y sponsors) serán responsables de fomentar el  cumplimiento de este código durante todo el evento.</p>
+
+        <ul>
+          <p><li>Todos los asistentes tienen derecho a ser tratados con cortesía, dignidad y respeto y estar libre de cualquier forma de discriminación, victimización, acoso o intimidación; como así también a disfrutar de un ambiente libre de comportamiento no deseado, lenguaje inapropiado e imágenes inadecuadas.</li></p>
+          <p><li>Está terminantemente prohibido el acoso. Entendiendo por éste, la comunicación ofensiva relacionada con el género, la orientación sexual, la discapacidad, la apariencia física, el tamaño corporal, la raza, la religión, las imágenes sexuales en espacios públicos, intimidación deliberada, acecho, siguiendo, de acoso fotografía o grabación, interrupción sostenida de conversaciones u otros eventos, inapropiado contacto físico y atención sexual no deseada.</li></p>
+          <p><li>Sea amable con los demás: Confiamos en que los asistentes podrán tratar a los demás de una manera que refleja la opinión generalizada de que la diversidad y la amabilidad son los puntos fuertes de nuestra comunidad que se celebran y fomentan.</li></p>
+          <p><li>Tenga cuidado con las palabras que elija. Recuerde que los chistes de exclusión sexistas, racistas, y otros pueden ser ofensivos para quienes le rodean.</li></p>
+        </ul>
+        
+
+        <p class="lead">Personal de la Conferencia estará encantado de ayudar a los participantes a que se sientan seguros y libres de acoso, por lo que si surgen problemas cubiertos por este código de conducta, por favor póngase en contacto con los organizadores del evento, los cuales tienen una remera distintiva.   Cualquier queja será confidencial, ser tomado en serio, investigada y tratada adecuadamente.</p>
+
+        <p class="lead">Si un participante se involucra en comportamiento que viola el código de conducta, los organizadores de la conferencia pueden tomar cualquier acción que consideren apropiadas, incluyendo advertencia al infractor o la expulsión de la conferencia sin reembolso.</p>
+        
       </div>
     </div>
   </div>
