--- a/index.html
+++ b/index.html
@@ -124,7 +124,153 @@ google.maps.event.addDomListener(window, 'load', initialize);
   </div>
 </section>
 
+<section class="features">
+  <div class="container">
+
+    <div class="row">
+
+      <div class="col-md-4">
+        <div class="ashwini circle"></div>
+        <h2>Ashwini Oruganti</h2>
+        <h4>El futuro de Python: El poder a la comunidad</h4>
+        <p>Construyamos una comunidad más fuerte de Python. Un llamado a acción para promover su desarrollo y una introducción de como la Python Software Foundation puede ayudar para soportar esta causa.</p>
+      </div>
+
+      <div class="col-md-4">
+        <!--<div class="circle"><i class="icon-bookmark"></i></div>-->
+        <div class="masanori circle">
+        </div>
+        <h2><a href="https://www.twitter.com/fmasanori" target='blank'>Fernando Masanori</a></h2>
+        <h4>Python para iniciantes</h4>
+        <p>Tutorial interactivo, y muy divertido para la gente, con conceptos básicos de programación para quien no sabe nada de Python. Vamos hackear módulos básicos y clases para obtener la “respuesta a la última pregunta de la vida, el universo, y todo”.</p>
+      </div>
+
+      <div class="col-md-4">
+        <div class="vinicius circle"></div>
+        <h2><a href="https://www.twitter.com/viniciuspach" target='blank'>Vinicius Pacheco</a></h2>
+        <h4>Patrones de diseño en Python</h4>
+        <p>Como los patrones de diseño nos pueden ayudar en una aplicación Flask. Presentación totalmente practica utilizando los patrones: Strategy, Chain of Responsibility, Template Method, Decorator, State, Builder y Observer</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4">
+        <div class="sorianello circle"> </div>
+        <h2><a href="https://www.twitter.com/_joac" target='blank'>Joaquín Sorianello</a></h2>
+        <h4>No es magia: descriptores al desnudo</h4>
+        <p>Python es un un lenguaje que se destaca por la flexibilidad para customizar el comportamiento de los objetos. Partiremos de un caso de estudio y explicaremos en detalle la API de descriptores de python, para poder comprender su funcionamiento y comportamiento, para poder así aprovecharlos al máximo a la hora de desarrollar. No apta para personas poco curiosas</p>
+      </div>
+
+      <div class="col-md-4">
+        <div class="victoria circle">
+        </div>
+        <h2><a href="https://www.twitter.com/vkmc" target='blank'>Victoria Martinez De La Cruz</a></h2>
+        <h4>DjangoGirls Tutorial</h4>
+        <p>DjangoGirls es una organización sin fines de lucro que tiene como objetivo animar a que más mujeres se involucren con la tecnología y aumentar la diversidad en la comunidad de Django. Para esto proveen herramientas, recursos y soporte para organizar talleres de programación de un día para que participantes sin conocimientos previos de programación puedan construir su primera aplicación web, usando Python, Django, HTML y CSS. Un taller típico admite entre 30 y 40 participantes, que trabajarán en equipos de tres personas y un tutor.</p>
+      </div>
+
+
+
+
+      <div class="col-md-4">
+        <div class="deza circle"></div>
+        <h2><a href="https://www.twitter.com/alfredodeza" target='blank'>Alfredo Deza</a></h2>
+        <h4>El desarrollador imperfecto: una guía para reivindicarse</h4>
+        <p>Heredar una herramienta para despliegues e instalación con una gran base de usuarios poco contentos puede ser un dolor de cabeza. Como se podría mejorar la herramienta?  Sin romper la compatibilidad con versiones anteriores y a la misma vez ganando la confianza de los usuarios, encontraremos el camino correcto creando un estereotipo indeseable. Presentación sera util para todo aquel que mantenga librerías o proyectos que desee prevenir muchos de los problemas que se encentran.</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4">
+        <div class="fisa circle">
+        </div>
+        <h2><a href="https://www.twitter.com/fisadev" target='blank'>Juan Pedro Fisanotti</a></h2>
+        <h4>Introducción a Django</h4>
+        <p>Introducción al desarrollo web con Python, utilizando el framework Django. Características principales del framework y su funcionamiento y desarrollo de una aplicación de ejemplo en vivo, desde el principio, explicando cada paso.</p>
+      </div>
+
+      <div class="col-md-4">
+        <div class="ramirez circle"></div>
+        <h2>Diego Ramirez</h2>
+        <h4>Practical OpenCV</h4>
+        <p>Despues de un tiempo de trabajar en talleres con chicos, programacion y robotica, decidimos darle una vuelta de rosca a la programacion por bloques y con una serie experimentos construimos una aplicacion web sencilla que interpreta las instrucciones que los chicos dibujan, y comanda a nuestro robot mascota para que ejecute la secuencia.</p>
+      </div>
+
+      <div class="col-md-4">
+        <div class="emiliano circle"></div>
+        <h2><a href="hhttps://www.linkedin.com/pub/emiliano-dalla-verde-marcozzi/13/166/349" target='blank'>Emiliano Dalla Verde Marcozzi</a></h2>
+        <h4>Asi que tu piensas que puedes PDBear?!</h4>
+        <p></p>
+      </div>
+
+    </div>
+  </section>
+
 <section class="sponsors">
+  </br>
+  <h1>Sponsors</h1>
+
+  <h2>Diamante</h2>
+  <div class="row">
+    <div class="col-lg-4 col-md-3 col-sm-2 col-xs-2"></div>
+    <div class="col-lg-6 col-md-3 col-sm-8 col-xs-8">
+      <img src="img/sponsors/eventbrite_brand_2015.png" class='img-responsive'/>
+    </div>
+    <div class="col-lg-4 col-md-3 col-sm-2 col-xs-2"></div>
+  </div>
+  </br>
+  <div class="row">
+    <div class="col-lg-4 col-md-3 col-sm-2 col-xs-2"></div>
+    <div class="col-lg-6 col-md-3 col-sm-8 col-xs-8">
+      <img src="img/sponsors/Onapsis_Logo.png" class='img-responsive'/>
+    </div>
+    <div class="col-lg-4 col-md-3 col-sm-2 col-xs-2"></div>
+  </div>
+
+  <h2>Oro</h2>
+  <div class="row">
+    <div class="col-lg-4 col-md-3 col-sm-3 col-xs-3"></div>
+    <div class="col-lg-4 col-md-3 col-sm-6 col-xs-6">
+      <img src="img/sponsors/Machinalis-Isologo.png" class='img-responsive'/>
+    </div>
+    <div class="col-lg-4 col-md-3 col-sm-3 col-xs-3"></div>
+  </div>
+
+  <h2>Plata</h2>
+  <div class="row">
+    <div class="col-lg-3 col-md-2 col-sm-2 col-xs-2"></div>
+    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
+    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+      <img src="img/sponsors/logo.svg" class='img-responsive'/>
+    </div>
+    <div class="col-lg-1 col-md-2 col-sm-2 col-xs-3"></div>
+    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
+    <div class="col-lg-2 col-md-2 col-sm-2"></div>
+  </div>
+
+
+  <h2>Bronce</h2>
+  <div class="row">
+    <div class="col-lg-1 col-md-1 col-sm-1"> </div>
+    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"> </div>
+    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"> </div>
+    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"> </div>
+    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-2">
+      <img src="img/sponsors/nuevo_logo1.png" class='img-responsive'/>
+    </div>
+    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-2">
+      <img src="img/sponsors/fierro2015.svg" class='img-responsive'/>
+    </div>
+    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-2">
+      <img src="img/sponsors/bqt-logo-cuadrado.png" class='img-responsive'/>
+    </div>
+    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"> </div>
+    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"> </div>
+    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"> </div>
+    <div class="col-lg-1 col-md-1 col-sm-1"> </div>
+    <div class="col-md-1 col-md-1 col-sm-1"> </div>
+  </div>
+
   <div class="row">
     <h1>¿Querés ser sponsor del evento?</h1>
     <a href="https://drive.google.com/file/d/0B7R6KRhjEcaHZF9iRDNBUGpQUWs/view?usp=sharing" class="btn btn-lg btn-primary" target="blank" role="button">Carta Sponsors</a>
