--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
   </div>
 </section>
 
-<section class="purchase">
+<section class="sponsors">
   <div class="container">
     <div class="row">
       <div class="col-md-offset-2 col-md-8">
@@ -149,7 +149,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
         <div class="vinicius circle"></div>
         <h2><a href="https://www.twitter.com/viniciuspach" target='blank'>Vinicius Pacheco</a></h2>
         <h4>Patrones de diseño en Python</h4>
-        <p>Como los patrones de diseño nos pueden ayudar en una aplicación Flask. Presentación totalmente practica utilizando los patrones: Strategy, Chain of Responsibility, Template Method, Decorator, State, Builder y Observer</p>
+        <p>Como los patrones de diseño nos pueden ayudar en una aplicación Flask. Presentación totalmente practica utilizando los patrones: Strategy, Chain of Responsibility, Template Method, Decorator, State, Builder y Observer.</p>
       </div>
     </div>
 
@@ -200,31 +200,43 @@ google.maps.event.addDomListener(window, 'load', initialize);
         <div class="emiliano circle"></div>
         <h2><a href="hhttps://www.linkedin.com/pub/emiliano-dalla-verde-marcozzi/13/166/349" target='blank'>Emiliano Dalla Verde Marcozzi</a></h2>
         <h4>Asi que tu piensas que puedes PDBear?!</h4>
-        <p></p>
+        <p>El depurador de Python 'pdb' es una valiosa herramienta a la hora de entender los errores que ocurren en sus programas. Aprenda en esta introducción los comandos comúnmente utilizados en el depurador de Python, a navegar e inspeccionar el código utilizando pdb, ipdb o rpdb.</p>
       </div>
 
     </div>
   </section>
 
-<section class="sponsors">
+<section class="venue">
+  <div class="row">
+    <h1>¿Dónde?</h1>
+    <p class="lead">En el centro cultural Julio Le Parc</p>
+    <div class="col-md-12 leparc">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12 google-maps">
+      <div id='map'></div>
+    </div>
+  </div>
+</section>
+
+<section class="purchase">
   </br>
   <h1>Sponsors</h1>
 
   <h2>Diamante</h2>
   <div class="row">
     <div class="col-lg-4 col-md-3 col-sm-2 col-xs-2"></div>
-    <div class="col-lg-6 col-md-3 col-sm-8 col-xs-8">
+    <div class="col-lg-8 col-md-3 col-sm-8 col-xs-8">
       <img src="img/sponsors/eventbrite_brand_2015.png" class='img-responsive'/>
     </div>
-    <div class="col-lg-4 col-md-3 col-sm-2 col-xs-2"></div>
   </div>
   </br>
   <div class="row">
     <div class="col-lg-4 col-md-3 col-sm-2 col-xs-2"></div>
-    <div class="col-lg-6 col-md-3 col-sm-8 col-xs-8">
+    <div class="col-lg-8 col-md-3 col-sm-8 col-xs-8">
       <img src="img/sponsors/Onapsis_Logo.png" class='img-responsive'/>
     </div>
-    <div class="col-lg-4 col-md-3 col-sm-2 col-xs-2"></div>
   </div>
 
   <h2>Oro</h2>
@@ -247,7 +259,6 @@ google.maps.event.addDomListener(window, 'load', initialize);
     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
     <div class="col-lg-2 col-md-2 col-sm-2"></div>
   </div>
-
 
   <h2>Bronce</h2>
   <div class="row">
@@ -274,20 +285,6 @@ google.maps.event.addDomListener(window, 'load', initialize);
   <div class="row">
     <h1>¿Querés ser sponsor del evento?</h1>
     <a href="https://drive.google.com/file/d/0B7R6KRhjEcaHZF9iRDNBUGpQUWs/view?usp=sharing" class="btn btn-lg btn-primary" target="blank" role="button">Carta Sponsors</a>
-  </div>
-</section>
-
-<section class="venue">
-  <div class="row">
-    <h1>¿Dónde?</h1>
-    <p class="lead">En el centro cultural Julio Le Parc</p>
-    <div class="col-md-12 leparc">
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12 google-maps">
-      <div id='map'></div>
-    </div>
   </div>
 </section>
 
