--- a/index.html
+++ b/index.html
@@ -202,6 +202,30 @@ google.maps.event.addDomListener(window, 'load', initialize);
         <p>Veremos como se comporta el ORM de Django con bases de datos grandes. Para esto nos focalizaremos en como funciona el ORM de Django, describir sus componentes y funcionalidades con el fin de generar consultas mas precisas y complejas para disminuir problemas de performance. Tambien se discutira sobre el uso de "managers" personalizados y consejos de escalabilidad con Django como el uso de multiples bases de datos.</p>
       </div>
     </div>
+
+      <div class="row">
+      <div class="col-md-4">
+        <div class="roberto circle">
+        </div>
+        <h2><a href="https://www.twitter.com/ralsina" target='blank'>Roberto Alsina</a></h2>
+        <h4>Cualquiera puede programar: construyendo la estrella de la muerte con legos</h4>
+        <p>Igual que las bandas punks, que pueden hacer una canción con tres acordes que te vuela la peluca, vos podés, armado con diez conceptos básicos, hacer programas que realizan tareas complicadas, que tal vez suponés están fuera de tu alcance. En esta charla vas a ver un ejemplo.</p>
+      </div>
+
+      <div class="col-md-4">
+        <div class="juanjo circle"></div>
+        <h2><a href="https://www.twitter.com/xjjo" target='blank'>Juanjo Ciarlante</a></h2>
+        <h4>Encantando PythonES para masticar data</h4>
+        <p>Introducción a data cruncking via mapreduce en ambientes de cloud computing. Veremos una demo de uso con Python.</p>
+      </div>
+
+      <div class="col-md-4">
+        <div class="claudio circle"></div>
+        <h2><a href="#" target='blank'>Claudio Daniel Freire</a></h2>
+        <h4>Obteniendo respuestas en milisegundos</h4>
+        <p>Si son como yo, usan la computadora para solucionar problemas complejos, pero les impacienta cuando tarda más de un minuto en responder. Los usuarios son así también. En esta charla vamos a ver cómo obtener respuestas en milisegundos en vez de minutos u horas, pero claro, con un truco: cacheando. La mayoría de los procesos que hay en un sistema útil son todos cacheables. Vamos a aprender a implementar arquitecturas complejas para solucionar problemas complejos.</p>
+      </div>
+    </div>
   </section>
 
 <section class="venue">
