Flavio, Simon y Facundo

--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@ google.maps.event.addDomListener(window, 'load', initialize);
     <div class="row">
 
       <div class="col-md-4">
+        <div class="simon circle"></div>
+        <h2><a href="https://www.twitter.com/simonw" target='blank'>Simon Willison</a></h2>
+        <h4>Migrando a microservicios en Eventbrite</h4>
+        <p>Como transicionar de una estructura singular y monolítica a una colección de microservicios sin parar el desarrollo y lanzamiento de nuevas funcionalidades.</p>
+        <p>Este es un proceso que toma años y estamos ya a mitad de camino. Veremos las herramientas que hemos desarrollado y discutiremos los varios desafíos de hacer cambios arquitectónicos a un gran sistema en producción.</p>
+      </div>
+
+      <div class="col-md-4">
         <div class="ashwini circle"></div>
         <h2><a href="http://ashfall.github.io/about/" target='blank'>Ashwini Oruganti</a></h2>
         <h4>El futuro de Python: El poder a la comunidad</h4>
@@ -120,20 +128,14 @@ google.maps.event.addDomListener(window, 'load', initialize);
         <p>Tutorial interactivo, y muy divertido para la gente, con conceptos básicos de programación para quien no sabe nada de Python. Vamos hackear módulos básicos y clases para obtener la “respuesta a la última pregunta de la vida, el universo, y todo”.</p>
       </div>
 
-      <div class="col-md-4">
-        <div class="vinicius circle"></div>
-        <h2><a href="https://www.twitter.com/viniciuspach" target='blank'>Vinicius Pacheco</a></h2>
-        <h4>Patrones de diseño en Python</h4>
-        <p>Como los patrones de diseño nos pueden ayudar en una aplicación Flask. Presentación totalmente practica utilizando los patrones: Strategy, Chain of Responsibility, Template Method, Decorator, State, Builder y Observer.</p>
-      </div>
     </div>
 
     <div class="row">
       <div class="col-md-4">
-        <div class="sorianello circle"> </div>
-        <h2><a href="https://www.twitter.com/_joac" target='blank'>Joaquín Sorianello</a></h2>
-        <h4>No es magia: descriptores al desnudo</h4>
-        <p>Python es un un lenguaje que se destaca por la flexibilidad para customizar el comportamiento de los objetos. Partiremos de un caso de estudio y explicaremos en detalle la API de descriptores de python, para poder comprender su funcionamiento y comportamiento, para poder así aprovecharlos al máximo a la hora de desarrollar. No apta para personas poco curiosas</p>
+        <div class="flavio circle"> </div>
+        <h2><a href="https://www.twitter.com/flaper87" target='blank'>Flavio Percoco</a></h2>
+        <h4>Rompiendo la compatibilidad hacia atrás: El camino fácil</h4>
+        <p>Digamos que tienes este software que muchas personas usan. Un día, te levantás con la necesidad de hacerlos sufrir. No hay mejor manera de hacerlo que rompiendo el software que están usando. En esta charla te voy a guiar sobre las mejores maneras de conseguirlo con ejemplos tomados desde la experiencia - porque la experiencia es lo único que realmente importa (TM) -. Para cuando termine tendrás lo que necesitas para hacerle lo mismo a tus usuarios.</p>
       </div>
 
       <div class="col-md-4">
@@ -205,11 +207,10 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
       <div class="row">
       <div class="col-md-4">
-        <div class="roberto circle">
-        </div>
-        <h2><a href="https://www.twitter.com/ralsina" target='blank'>Roberto Alsina</a></h2>
-        <h4>Cualquiera puede programar: construyendo la estrella de la muerte con legos</h4>
-        <p>Igual que las bandas punks, que pueden hacer una canción con tres acordes que te vuela la peluca, vos podés, armado con diez conceptos básicos, hacer programas que realizan tareas complicadas, que tal vez suponés están fuera de tu alcance. En esta charla vas a ver un ejemplo.</p>
+        <div class="facundo circle"> </div>
+        <h2><a href="https://www.twitter.com/facundobatista" target='blank'>Facundo Batista</a></h2>
+        <h4>Programación asincrónica en Python 3: el futuro ya llegó.</h4>
+        <p>Conceptos teóricos de la programación asincrónica, mostrando a través de varios ejemplos como lograr implementar esa teoría usando los nuevos módulos y sintaxis presentes en la última versión de Python 3.</p>
       </div>
 
       <div class="col-md-4">
@@ -221,9 +222,35 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
       <div class="col-md-4">
         <div class="claudio circle"></div>
-        <h2><a href="#" target='blank'>Claudio Daniel Freire</a></h2>
+        <h2><a href="https://github.com/klaussfreire" target='blank'>Claudio Daniel Freire</a></h2>
         <h4>Obteniendo respuestas en milisegundos</h4>
         <p>Si son como yo, usan la computadora para solucionar problemas complejos, pero les impacienta cuando tarda más de un minuto en responder. Los usuarios son así también. En esta charla vamos a ver cómo obtener respuestas en milisegundos en vez de minutos u horas, pero claro, con un truco: cacheando. La mayoría de los procesos que hay en un sistema útil son todos cacheables. Vamos a aprender a implementar arquitecturas complejas para solucionar problemas complejos.</p>
+      </div>
+    </div>
+    
+    
+    <div class="row">
+
+      <div class="col-md-4">
+        <div class="roberto circle">
+        </div>
+        <h2><a href="https://www.twitter.com/ralsina" target='blank'>Roberto Alsina</a></h2>
+        <h4>Cualquiera puede programar: construyendo la estrella de la muerte con legos</h4>
+        <p>Igual que las bandas punks, que pueden hacer una canción con tres acordes que te vuela la peluca, vos podés, armado con diez conceptos básicos, hacer programas que realizan tareas complicadas, que tal vez suponés están fuera de tu alcance. En esta charla vas a ver un ejemplo.</p>
+      </div>
+
+      <div class="col-md-4">
+        <div class="sorianello circle"> </div>
+        <h2><a href="https://www.twitter.com/_joac" target='blank'>Joaquín Sorianello</a></h2>
+        <h4>No es magia: descriptores al desnudo</h4>
+        <p>Python es un un lenguaje que se destaca por la flexibilidad para customizar el comportamiento de los objetos. Partiremos de un caso de estudio y explicaremos en detalle la API de descriptores de python, para poder comprender su funcionamiento y comportamiento, para poder así aprovecharlos al máximo a la hora de desarrollar. No apta para personas poco curiosas</p>
+      </div>
+
+      <div class="col-md-4">
+        <div class="vinicius circle"></div>
+        <h2><a href="https://www.twitter.com/viniciuspach" target='blank'>Vinicius Pacheco</a></h2>
+        <h4>Patrones de diseño en Python</h4>
+        <p>Como los patrones de diseño nos pueden ayudar en una aplicación Flask. Presentación totalmente practica utilizando los patrones: Strategy, Chain of Responsibility, Template Method, Decorator, State, Builder y Observer.</p>
       </div>
     </div>
   </section>
