--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
         <div class="michael circle">
         </div>
         <h2><a href="http://michael-cetrulo.com" target='blank'>Michael Cetrulo</a></h2>
-        <h4>Title	Paralelismo y concurrencia practica en Python</h4>
+        <h4>Paralelismo y concurrencia practica en Python</h4>
         <p>Analizaremos el problema de la concurrencia y la computación en paralelo en Python, evaluando diferentes enfoques, herramientas, librerías y viendo los pros y contras de cada caso.</p>
         <h4>Django REST Framework en profundidad</h4>
         <p>Daremos un recorrido por las principales funcionalidades y veremos en detalle cada uno de los componentes del framework. Quien no conoce esta herramienta saldrá en condiciones de poder empezar a usarla y quienes ya tengan algo de experiencia alcancen un mayor dominio y un mejor entendimiento de la misma.</p>
@@ -279,6 +279,31 @@ google.maps.event.addDomListener(window, 'load', initialize);
         <h4>Es posible detectar las excepciones de un codigo python?</h4>
         <p>Detectar todas las excepciones que pueden lanzarse en un programa, incluso en una funcion (y las que usa), no es una tarea completamente factible ni sencillo. Sin embargo, hay algunas cuantas cosas que uno puede hacer, para tener una idea bastante aproximada de ello. Veremos una posible implementacion para resolver este problema en cierta medida.</p>
       </div>
+    </div>
+
+    
+    <div class="row">
+      <div class="col-md-4">
+        <div class="mariano circle">
+        </div>
+        <h2><a href="https://www.twitter.com/falconius" target='blank'>Mariano Falcón</a></h2>
+        <h4>Introducción práctica a Machine Learning con scikit-learn</h4>
+        <p>Librería scikit-learn para abordar conceptos básicos de Machine Learning con ejemplos prácticos y utilizando datos de sitios actuales como Mercado Libre. Aprendizaje supervisado y no supervisado. Support Vector Machine. K-Means clustering. K-Nearest Neighbors.</p>
+      </div>
+
+      <div class="col-md-4">
+        <div class="julieta circle"> </div>
+        <h2><a href="http://www.linkedin.com/in/julietavalentin" target='blank'>Julieta Valentin</a></h2>
+        <h4>Python meets Selenium: automatizando al usuario</h4>
+        <p>Se introducirá al uso de Selenium webdriver, una herramienta que permite automatizar las acciones de un usuario en una aplicación web, utilizando un patrón de diseño que modela la UI, a fin de evitar la duplicación de código y facilitar el desarrollo de tests.Se explicarán los conceptos básicos del patrón elegido, Page Objects, mostrando su implementación en python.</p>
+      </div>
+
+      <!--<div class="col-md-4">-->
+        <!--<div class="david circle"></div>-->
+        <!--<h2><a href="https://about.me/tenuki" target='blank'>David Weil</a></h2>-->
+        <!--<h4>Es posible detectar las excepciones de un codigo python?</h4>-->
+        <!--<p>Detectar todas las excepciones que pueden lanzarse en un programa, incluso en una funcion (y las que usa), no es una tarea completamente factible ni sencillo. Sin embargo, hay algunas cuantas cosas que uno puede hacer, para tener una idea bastante aproximada de ello. Veremos una posible implementacion para resolver este problema en cierta medida.</p>-->
+      <!--</div>-->
     </div>
 
 
