Info de contacto

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="http://ar.pycon.org"/>
 <meta property="og:title" content="PyCon Argentina 2015 - 12,13 y 14 de Noviembre en Mendoza"/>
-<meta property="og:description" content="Call for charlas abierto! Envianos tu propuesta para dar una charla en PyCon Argentina 2015. Tenés tiempo hasta el 15 de Septiembre. Lo más probable es que no haya extensiones en el plazo, por lo que tengan presente la fecha y no se demoren en enviar las propuestas."/>
+<meta property="og:description" content="Inscripciones abiertas."/>
 <meta property="og:image" content="http://ar.pycon.org/img/python_logo.png"/>
 <!-- CSS
         ================================================== -->
@@ -415,6 +415,13 @@ google.maps.event.addDomListener(window, 'load', initialize);
     <h1>¿Querés ser sponsor del evento?</h1>
     <a href="https://drive.google.com/file/d/0B7R6KRhjEcaHZF9iRDNBUGpQUWs/view?usp=sharing" class="btn btn-lg btn-primary" target="blank" role="button">Carta Sponsors</a>
   </div>
+</section>
+
+<section class="features">
+  <div class="container">
+    <h5>Co-organizan:</h5> <a href="http://python.org.ar" target='blank'>Python Argentina</a> y <a href="https://www.eventbrite.com" target='blank'>Eventbrite</a>
+    <h5>Contacto:</h5> <a href='mailto:diegocaliri@gmail.com'>Diego Caliri</a> y <a href='mailto:miloops@gmail.com'>Emilio Tagua</a>
+    </div>
 </section>
 
 
