--- a/index.html
+++ b/index.html
@@ -370,11 +370,14 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
   <h2>Oro</h2>
   <div class="row">
-    <div class="col-lg-4 col-md-3 col-sm-3 col-xs-3"></div>
-    <div class="col-lg-4 col-md-3 col-sm-6 col-xs-6">
+    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"></div>
+    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
       <img src="img/sponsors/Machinalis-Isologo.png" class='img-responsive'/>
     </div>
-    <div class="col-lg-4 col-md-3 col-sm-3 col-xs-3"></div>
+    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+      <img src="img/sponsors/mozio-logo.png" class='img-responsive'/>
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"></div>
   </div>
 
   <h2>Plata</h2>
