Pamela Prosperi como speaker

--- a/index.html
+++ b/index.html
@@ -298,12 +298,12 @@ google.maps.event.addDomListener(window, 'load', initialize);
         <p>Se introducirá al uso de Selenium webdriver, una herramienta que permite automatizar las acciones de un usuario en una aplicación web, utilizando un patrón de diseño que modela la UI, a fin de evitar la duplicación de código y facilitar el desarrollo de tests.Se explicarán los conceptos básicos del patrón elegido, Page Objects, mostrando su implementación en python.</p>
       </div>
 
-      <!--<div class="col-md-4">-->
-        <!--<div class="david circle"></div>-->
-        <!--<h2><a href="https://about.me/tenuki" target='blank'>David Weil</a></h2>-->
-        <!--<h4>Es posible detectar las excepciones de un codigo python?</h4>-->
-        <!--<p>Detectar todas las excepciones que pueden lanzarse en un programa, incluso en una funcion (y las que usa), no es una tarea completamente factible ni sencillo. Sin embargo, hay algunas cuantas cosas que uno puede hacer, para tener una idea bastante aproximada de ello. Veremos una posible implementacion para resolver este problema en cierta medida.</p>-->
-      <!--</div>-->
+      <div class="col-md-4">
+        <div class="pamela circle"></div>
+        <h2><a href="#" target='blank'>Pamela Prosperi</a></h2>
+        <h4>Appium para Pythonistas</h4>
+        <p>Aprender a testear en equipos móviles hoy es una necesidad para desarrolladores. Appium es para dispositivos móviles lo que Selenium es para browsers, un framework que permite automatizar acciones en browsers, esto tiene muchas utilidades pero la más utilizada es la de escribir y generar tests. Estos tests pueden estar escritos en cualquier lenguaje, incluso Python, no necesitan estar en el mismo lenguaje que se escribió la app.</p>
+      </div>
     </div>
 
 
