Casi los últimos speakers y sacamos que Eventbrite co-organiza. :gun: Nos encanta mentir.

--- a/index.html
+++ b/index.html
@@ -306,6 +306,31 @@ google.maps.event.addDomListener(window, 'load', initialize);
       </div>
     </div>
 
+    <div class="row">
+
+      
+      <div class="col-md-4">
+        <div class="guillermo circle"></div>
+        <h2><a href="https://ar.linkedin.com/pub/guillermo-narvaja/4/943/120" target='blank'>Guillermo Narvaja</a></h2>
+        <h4>Cacheando fuera de Django</h4>
+        <p>Pretendo repasar los distintos niveles de caché (Browser, CDN, server http -django-), sus trade-offs y cómo usar cada uno de ellos. Los archivos estáticos (js / css) y como cachearlos efectivamente con django-gears. Cookie-less domain. Imágenes. Cacheo de APIs. En lo posible complementando con datos.</p>
+      </div>
+
+      <div class="col-md-4">
+        <div class="sofia circle"> </div>
+        <h2><a href="https://www.twitter.com/entrerrianas" target='blank'>Sofia Martín</a></h2>
+        <h4>Tu primera aplicación con kivy para móviles</h4>
+        <p>Kivy es una librería para desarrollo de aplicaciones en Python para pc y para dispositivos móviles. Corre en Linux, Windows, Android, OS X, iOS. Aprende a hacer tu primera aplicación, cómo probarla sin necesidad de compilar.</p>
+      </div>
+
+      <!--<div class="col-md-4">-->
+        <!--<div class="marcos circle">-->
+        <!--</div>-->
+        <!--<h2><a href="https://www.grulic.org.ar/~mdione/glob/" target='blank'>Marcos Dione</a></h2>-->
+        <!--<h4>De socket a asyncio en 45 minutos</h4>-->
+        <!--<p>Vamos a ver cómo, a partir de un programa que usa sockets, se puede desarrollar un framework asincrónico; y cómo traducir dicho programa a la versión de asyncio de Python3.5.</p>-->
+      <!--</div>-->
+    </div>
 
   </section>
 
@@ -422,7 +447,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
 <section class="features">
   <div class="container">
-    <h5>Co-organizan:</h5> <a href="http://python.org.ar" target='blank'>Python Argentina</a> y <a href="https://www.eventbrite.com" target='blank'>Eventbrite</a>
+    <h5>Organiza:</h5> <a href="http://python.org.ar" target='blank'>Python Argentina</a>
     <h5>Contacto:</h5> <a href='mailto:diegocaliri@gmail.com'>Diego Caliri</a> y <a href='mailto:miloops@gmail.com'>Emilio Tagua</a>
     </div>
 </section>
