Último speaker confirmado

--- a/index.html
+++ b/index.html
@@ -323,13 +323,13 @@ google.maps.event.addDomListener(window, 'load', initialize);
         <p>Kivy es una librería para desarrollo de aplicaciones en Python para pc y para dispositivos móviles. Corre en Linux, Windows, Android, OS X, iOS. Aprende a hacer tu primera aplicación, cómo probarla sin necesidad de compilar.</p>
       </div>
 
-      <!--<div class="col-md-4">-->
-        <!--<div class="marcos circle">-->
-        <!--</div>-->
-        <!--<h2><a href="https://www.grulic.org.ar/~mdione/glob/" target='blank'>Marcos Dione</a></h2>-->
-        <!--<h4>De socket a asyncio en 45 minutos</h4>-->
-        <!--<p>Vamos a ver cómo, a partir de un programa que usa sockets, se puede desarrollar un framework asincrónico; y cómo traducir dicho programa a la versión de asyncio de Python3.5.</p>-->
-      <!--</div>-->
+      <div class="col-md-4">
+        <div class="marcos circle">
+        </div>
+        <h2><a href="https://www.grulic.org.ar/~mdione/glob/" target='blank'>Marcos Dione</a></h2>
+        <h4>De socket a asyncio en 45 minutos</h4>
+        <p>Vamos a ver cómo, a partir de un programa que usa sockets, se puede desarrollar un framework asincrónico; y cómo traducir dicho programa a la versión de asyncio de Python3.5.</p>
+      </div>
     </div>
 
   </section>
